[gd_scene load_steps=3 format=3 uid="uid://04n8285beash"]

[ext_resource type="Script" path="res://scripts/Camera.gd" id="1_in0fa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jti0t"]
size = Vector2(320, 180)

[node name="Camera2D" type="Camera2D"]
position = Vector2(0, 16)
anchor_mode = 0
script = ExtResource("1_in0fa")

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["camera"]]
collision_layer = 64
collision_mask = 68

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(160, 90)
shape = SubResource("RectangleShape2D_jti0t")
debug_color = Color(0.647059, 0.701961, 0, 0.0235294)

[node name="Mood" type="ColorRect" parent="."]
z_index = 6
offset_top = 180.0
offset_right = 320.0
offset_bottom = 380.0
color = Color(0.0509804, 0.117647, 0.270588, 0.301961)

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
